--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,5 +8,13 @@ jobs:
         uses: actions/checkout@v2
       - name : Install dependancies
         run: npm ci
+      - name : Initialize Git user
+        run: |
+          git config --global user.email "styvelioumba98@gmail.com"
+          git config --global user.name "Release workflow"
+      - name: Run release
+        run: npm run release --ci
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: End message
         run: echo "End of release workflow"
