--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -13,6 +13,8 @@ jobs:
   build:
 
     runs-on: ubuntu-20.04
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout
@@ -37,4 +39,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ${{ github.repository }}:${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && github.event_name == 'push' && github.ref_type == 'tag' && github.ref == 'refs/tags/v*.*.*' && replace(github.ref, 'refs/tags/v', '') || github.event_name == 'push' && github.ref_type == 'branch' && github.ref == 'refs/heads/main' && 'latest' || github.event_name == 'push' && github.ref_type == 'branch' && 'v' + github.ref || '' }}-${{ github.head_ref || github.ref_name }}
+            ${{ github.repository }}:${{ github.ref_type == 'tag' && replace(github.ref, 'refs/tags/', '') || 'latest' }}-${{ github.head_ref || 'main' }}
