--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -39,4 +39,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ${{ github.repository }}:${{ github.ref_type == 'tag' && replace(github.ref, 'refs/tags/', '') || 'latest' }}-${{ github.head_ref || 'main' }}
+            ${{ github.repository }}:${{ github.run_number }}-${{ github.head_ref || github.ref_name }}
