--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME:  ${{ github.repository | replace('/', '_') | toLowerCase() }}
 
 jobs:
   build:
@@ -41,4 +41,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ${{ github.repository }}:${{ github.run_number }}-${{ github.head_ref || github.ref_name }}
+            ${{ github.repository | replace('/', '_') | toLowerCase() }}:${{ github.run_number }}-${{ github.head_ref || github.ref_name }}
