--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/terminus": "^10.2.0",
-    "@prisma/client": "^5.6.0",
+    "@prisma/client": "^5.7.0",
     "axios": "^1.6.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "helmet": "^7.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
