--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,13 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:root@localhost:5432/msReseauTrans?schema=public"
+DATABASE_URL=postgresql://postgres:root@localhost:5432/msReseauTrans?schema=public
 PORT=3000
+MASTER_KEY=
+OSRM_PORT=5000
+MEILI_PORT=7700
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=root
+POSTGRES_DB=msReseauTrans
+POSTGRES_HOST=127.0.0.1
+POSTGRES_PORT=5432
